[package]
name = "IntelCache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql","chrono"] }
chrono = "0.4"
dotenv = "0.15.0"
ipfs-api-backend-hyper = "0.2"
futures = "0.3"
tokio = { version = "1.14.0", features = ["full"] }
flate2 = "0.2"
tar = "0.4"

