[package]
name = "intel-cache-lib"
version = "1.0.0"
authors = ["case-prudolicce"]
edition = "2021"
description = "Library for interacting with IntelCache"
license = "AGPLv3"

[dependencies]
diesel = { version = "1.4.4", features = ["mysql","chrono"] }
chrono = "0.4"
dotenv = "0.15.0"
ipfs-api-backend-hyper = "0.2"
futures = "0.3"
tokio = { version = "1.14.0", features = ["full"] }
flate2 = "0.2"
tar = "0.4"

