[package]
name = "intel_cache_server"
version = "1.1.0"
authors = ["case-prudolicce"]
edition = "2021"
description = "IntelCache server"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel-cache-lib = { version="1.1.1",path = "../intel-cache-lib" }
rpassword = "0.0.4"
