[package]
name = "ic-core-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel-cache-lib = { version="1.1.0",path = ".." }
diesel = { version = "1.4.4", features = ["mysql","chrono"] }
futures = "0.3"
sha2 = "0.10.1"
public-ip = "0.2.2"

[lib]
crate-type = ["dylib"]
