[package]
name = "ic-storage-module"
version = "1.0.0"
authors = ["case-prudolicce"]
edition = "2021"
description = "Native client for interacting with IntelCache"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel-cache-lib = { version="2.0.0",path = ".." }
diesel = { version = "1.4.4", features = ["mysql","chrono"] }
futures = "0.3"
sha2 = "0.10.1"
public-ip = "0.2.2"
ipfs-api-backend-hyper = "0.2"
tar = "0.4"

[lib]
crate-type = ["dylib"]
